Change link paths

--- a/jquery-slide-drawer-plugin/index.html
+++ b/jquery-slide-drawer-plugin/index.html
@@ -1,3 +1,15 @@
 ---
 layout: default
---
+title: JQuery Slide Drawer Plugin
+---
+
+<p>The jQuery Slide Drawer was created from a script I started for a website. I had a full screen slideshow for that website (<a href="http://projects.icastwork.com/slidedrawer/">see first script</a>) and wanted the bottom navigation to show and then go away so the user knew something was there.</p>
+
+<p>The plugin has several settings that allow for the drawer to remain static and just toggle, to go away after a set amount of seconds and the speed at which is moves. Read full install and settings on github.</p>
+
+<p><a href="http://projects.icastwork.com/jQuerySlideDrawer/">View Demo</a></p>
+
+<p><a href="https://github.com/icemancast/jquery-slide-drawer">Slide Drawer Plugin Github</a><br />
+	<em>Feel free to fork and make changes or if you see any issues please let me know.</em></p>
+
+<p><a href="https://github.com/icemancast/jquery-slide-drawer#license">View licensing here</a></p>
