--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 		<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 		
 		<p>
-			<img src="/media/images/posts/{{post.featured_image}}.jpg" class="left img-responsive" alt="Responsive image">
+			<img src="/media/images/posts/{{post.featured_image}}.jpg" class="left img-responsive img-thumbnail" alt="Responsive image">
 			<div class="clearfix hidden-md hidden-lg"></div>
       <p>{{ post.excerpt }} ... <a href="{{ post.url }}">more >></a></p>
 			{% if post.link1_title %}
