bio changes to about me

--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,6 @@
 layout: default
 title: About Me (icemancast)
 ---
-{{ site.data.personal.bio }}
+<p>{{ site.data.personal.bio }}</p>
 
 <p><a href="/resume">View my resume</a></p>
