--- a/squadup/index.html
+++ b/squadup/index.html
@@ -17,6 +17,8 @@ title: SquadUp Test
         paypalEnabled: false
     }
 
+    document.dispatchEvent(new CustomEvent('createSquadupEmbed'));
+
     document.addEventListener("orderSuccessful", function (e) {
       var orderData = e.detail;
       console.log(orderData);
