--- a/squadup/index.html
+++ b/squadup/index.html
@@ -2,28 +2,120 @@
 layout: default
 title: SquadUp Test
 ---
+<style>
+
+    .squadup-even-titlebar .title {
+        color: #fff !important;
+    }
+
+    .modal-content {
+        background-color: #fff;
+        opacity: 1;
+        color: #eee;
+    }
+
+    #squadup-checkout-main .squadup-user-banner {
+        display: none !important;
+    }
+
+    #squadup-checkout-main .squadup-embed-view {
+        display: none !important;
+    }
+</style>
+
+<div id="squadup-checkout-main"></div>
+
+<article>
+    <h2>Event 1</h2>
+    <p>description here</p>
+    <p>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ticketModal3084">
+          Launch demo modal
+        </button>
+    </p>
+</article>
+
+<article>
+    <h2>Event 2</h2>
+    <p>description here</p>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ticketModal3085">
+      Launch demo modal
+    </button>
+</article>
+
+<!-- Modal -->
+<div class="modal fade" id="ticketModal3084" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document" style="width: 990px;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Some Title</h4>
+      </div>
+      <div class="modal-body" style="height: 800px">
+        <iframe width="992" height="800" src="http://localhost:4000/squadup/event/?id=3084" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="ticketModal3085" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document" style="width: 990px;">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Some Title</h4>
+      </div>
+      <div class="modal-body" style="height: 800px">
+        <iframe width="992" height="800" src="http://localhost:4000/squadup/event/?id=3085" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <link rel="stylesheet" href="https://s3.amazonaws.com/checkout.squadup.com/default/css/bootstrap-namespace.min.css">
-<div id="squadup-checkout"></div>
 <script>
+
     squadup = {
-        title: 'ReImagine Events',
         image: 'https://static1.squarespace.com/static/57db3bf82994ca0f0c8fe90c/t/58f02d4bf5e231091c3fc95f/1492135250822/Asset+4.png',
-        root: 'squadup-checkout',
+        root: 'squadup-checkout-main',
         userId: [3430],
         collapseTicketDescription: true,
         shoppingCartEnabled: true,
         paypalEnabled: false
     }
 
+    $('#squadup-checkout-main .squadup-user-banner').hide();
+    $('#squadup-checkout-main .squadup-embed-view').hide();
 
-    document.addEventListener("orderSuccessful", function (e) {
-        var orderData = e.detail;
-      var details = 'Your order(s): ';
-      orderData.items.forEach(function(detail) {
-          details += '#' + detail.order_id + ' - ' + detail.event.name;
-      });
-      alert(details);
-    }, false);
+
+    // document.addEventListener("orderSuccessful", function (e) {
+    //     var orderData = e.detail;
+    //   var details = 'Your order(s): ';
+    //   orderData.items.forEach(function(detail) {
+    //       details += '#' + detail.order_id + ' - ' + detail.event.name;
+    //   });
+    //   alert(details);
+    // }, false);
+
+    // document.addEventListener("shoppingCartUpdated", function (e) {
+    //   var shoppingCartData = e.detail;
+    //   console.log(shoppingCartData);
+    // }, false);
+
+    // var newCheckout = $('#shopping-cart');
+    // var modalCheckout = $('#squadup-checkout');
+
+    // newCheckout.html(modalCheckout);
 
 </script>
 <script src="https://s3.amazonaws.com/checkoutstaging.squadup.com/main-v2.min.js"></script>
