--- a/squadup/index.html
+++ b/squadup/index.html
@@ -19,15 +19,53 @@ title: SquadUp Test
     }
 
     #squadup-checkout-main .squadup-embed-view {
-        display: none !important;
+       display: none !important;
     }
 </style>
+<link rel="stylesheet" href="https://s3.amazonaws.com/checkout.squadup.com/default/css/bootstrap-namespace.min.css">
 
 <div id="squadup-checkout-main"></div>
+<script>
+
+    squadup = {
+        image: 'https://static1.squarespace.com/static/57db3bf82994ca0f0c8fe90c/t/58f02d4bf5e231091c3fc95f/1492135250822/Asset+4.png',
+        root: 'squadup-checkout-main',
+        userId: [3430],
+        collapseTicketDescription: true,
+        shoppingCartEnabled: true,
+        paypalEnabled: false
+    }
+
+
+
+//    $('#squadup-checkout-main .squadup-user-banner').hide();
+//   $('#squadup-checkout-main .squadup-embed-view').hide();
+
+
+    // document.addEventListener("orderSuccessful", function (e) {
+    //     var orderData = e.detail;
+    //   var details = 'Your order(s): ';
+    //   orderData.items.forEach(function(detail) {
+    //       details += '#' + detail.order_id + ' - ' + detail.event.name;
+    //   });
+    //   alert(details);
+    // }, false);
+
+    // document.addEventListener("shoppingCartUpdated", function (e) {
+    //   var shoppingCartData = e.detail;
+    //   console.log(shoppingCartData);
+    // }, false);
+
+    // var newCheckout = $('#shopping-cart');
+    // var modalCheckout = $('#squadup-checkout');
+
+    // newCheckout.html(modalCheckout);
+
+</script>
 
 <article>
     <h2>Event 1</h2>
-    <p>description here</p>
+    <p>We can change this description</p>
     <p>
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ticketModal3084">
@@ -82,40 +120,4 @@ title: SquadUp Test
 </div>
 
 
-<link rel="stylesheet" href="https://s3.amazonaws.com/checkout.squadup.com/default/css/bootstrap-namespace.min.css">
-<script>
-
-    squadup = {
-        image: 'https://static1.squarespace.com/static/57db3bf82994ca0f0c8fe90c/t/58f02d4bf5e231091c3fc95f/1492135250822/Asset+4.png',
-        root: 'squadup-checkout-main',
-        userId: [3430],
-        collapseTicketDescription: true,
-        shoppingCartEnabled: true,
-        paypalEnabled: false
-    }
-
-    $('#squadup-checkout-main .squadup-user-banner').hide();
-    $('#squadup-checkout-main .squadup-embed-view').hide();
-
-
-    // document.addEventListener("orderSuccessful", function (e) {
-    //     var orderData = e.detail;
-    //   var details = 'Your order(s): ';
-    //   orderData.items.forEach(function(detail) {
-    //       details += '#' + detail.order_id + ' - ' + detail.event.name;
-    //   });
-    //   alert(details);
-    // }, false);
-
-    // document.addEventListener("shoppingCartUpdated", function (e) {
-    //   var shoppingCartData = e.detail;
-    //   console.log(shoppingCartData);
-    // }, false);
-
-    // var newCheckout = $('#shopping-cart');
-    // var modalCheckout = $('#squadup-checkout');
-
-    // newCheckout.html(modalCheckout);
-
-</script>
 <script src="https://s3.amazonaws.com/checkoutstaging.squadup.com/main-v2.min.js"></script>
