--- a/squadup/index.html
+++ b/squadup/index.html
@@ -30,7 +30,7 @@ title: SquadUp Test
 <link rel="stylesheet" href="https://s3.amazonaws.com/checkout.squadup.com/default/css/bootstrap-namespace.min.css">
 
 <header class="text-right">
-    <a href="#" data-toggle="modal" data-target="#checkoutModal">View Cart</a>
+    <a href="#" id="view-cart">View Cart</a>
 </header>
 
 <article>
@@ -70,24 +70,6 @@ title: SquadUp Test
     </div>
   </div>
 </div>
-
-<!-- Modal -->
-<!-- <div class="modal fade" id="ticketModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document" style="width: 990px;">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Some Title</h4>
-      </div>
-      <div class="modal-body" style="height: 800px">
-        <iframe width="992" height="800" src="http://icemancast.com/squadup/event/?id=3085" frameborder="0" allowfullscreen></iframe>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div> -->
 
 <!-- Checkout Modal -->
 <div class="modal fade" id="checkoutModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
